# python-template

./: .editorconfig  .flake8  .lfsconfig  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: formatting.yml  initialize.yml  linting.yml
